[Fix] Overlapping non-adjacent handles (#2663)
In a previous PR, we improved logic for skipping virtual handles if a
handle's neighbor is too close to it. This PR improves this logic
further by testing against all other vertex handles, not just the
neighbors; and skipping tests against handles that are not vertices
(such as arrow text labels).

This PR also:
- removes some static cursors from `useCursors`
- adds a tiny bit of hover to text labels to differentiate them when
hovered

### Change Type

- [x] `patch` — Bug fix

### Test Plan

1. Create an arrow with a text label
2. Select the arrow
3. The arrow's middle handle should be selectable and in front of the
text label

### Release Notes

- Fixed a bug with virtual / create handle visibility.

--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -516,7 +516,6 @@ input,
 	fill: transparent;
 	stroke: transparent;
 	pointer-events: all;
-	cursor: var(--tl-cursor-grabbing);
 }
 
 .tl-handle__fg {
@@ -524,6 +523,16 @@ input,
 	stroke: var(--color-selection-stroke);
 	stroke-width: calc(1.5px * var(--tl-scale));
 	pointer-events: none;
+}
+
+.tl-handle__text-adjust {
+	cursor: var(--tl-cursor-grab);
+	fill: transparent;
+}
+
+.tl-handle__text-adjust:hover {
+	stroke-width: calc(2px * var(--tl-scale));
+	stroke: var(--color-selection-stroke);
 }
 
 .tl-handle__create {
